fix: fix page overflow when sunburst is displayed

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -17,7 +17,6 @@ body {
   padding: 0;
   margin: 0;
   font-size: 16px;
-
   width: 100%;
   min-width: 320px;
   height: 100%;
@@ -32,8 +31,7 @@ body {
 #app {
   padding: 0 3.125rem;
   min-height: 100%;
-  overflow: auto;
-  -webkit-overflow-scrolling: auto;
+  overflow: hidden;
   @include flex-center;
 
   @media #{$mobile} {
